--- a/css/style.css
+++ b/css/style.css
@@ -171,92 +171,74 @@ html {
   width: 42%;
 }
 
+.corpotudotexto .imagensesquerda{
+  width: 100%;
+}
+
 .corpotudotexto .imagensesquerda a{
   color: rgb(110, 168, 221);
+}
+
+.corpotudotexto .imagensesquerda .um p{
+  font-size: 16px;
+}
+
+.corpotudotexto .imagensesquerda img{
+  margin-top: 20px;
+  width:100%;
+  height:400px;
+}
+
+.corpotudotexto .imagensdireita{
+  width: 100%;
 }
 
 .corpotudotexto .imagensdireita a{
   color: rgb(110, 168, 221);
 }
 
-.corpotudotexto .imagensesquerda .um{
-  width: 100%;
-}
-
-.corpotudotexto .imagensdireita .dois{
-  width: 100%;
-}
-
-.corpotudotexto .imagensesquerda .tres{
-  width: 100%;
-}
-
-.corpotudotexto .imagensdireita .quatro{
-  width: 100%;
-}
-
-.corpotudotexto .imagensesquerda .um img{
+.corpotudotexto .imagensdireita img{
   margin-top: 20px;
-  width: 800px;
+  width:100%;
   height:400px;
 }
 
-.corpotudotexto .imagensdireita .dois img{
-  margin-top: 20px;
-  width:800px;
-  height:400px;
-}
-
-.corpotudotexto .imagensesquerda .tres img{
-  margin-top: 20px;
-  width:800px;
-  height:400px;
-}
-
-.corpotudotexto .imagensdireita .quatro img{
-  margin-top: 20px;
-  width:800px;
-  height:400px;
-}
-
-.corpotudotexto .imagensesquerda .um{
+.corpotudotexto .imagensesquerda{
   margin-left: 7%;
   width: 40%;
+}
+
+.corpotudotexto .imagensesquerda p{
+  margin-top: 10px;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+
+.corpotudotexto .imagensdireita{
+  margin-left: 5%;
+  width: 40%;
+}
+
+.corpotudotexto .imagensdireita p{
+  margin-top: 10px;
+  text-align: justify;
+  margin-bottom: 20px;
 }
 
 .corpotudotexto .imagensesquerda .um p{
-  margin-top: 10px;
-  text-align: justify;
-}
-
-.corpotudotexto .imagensdireita .dois{
-  margin-left: 26%;
-  width: 40%;
-}
-.corpotudotexto .imagensdireita .dois p{
-  margin-top: 10px;
-  text-align: justify;
-}
-
-.corpotudotexto .imagensesquerda .tres{
-  margin-left: 7%;
-  width: 40%;
+  font-size: 16px;
 }
 
 .corpotudotexto .imagensesquerda .tres p{
-  margin-top: 10px;
-  text-align: justify;
+  font-size: 16px;
 }
 
-.corpotudotexto .imagensdireita .quatro{
-  margin-left: 26%;
-  width: 40%;
+.corpotudotexto .imagensdireita .dois p{
+  font-size: 16px;
 }
 
 .corpotudotexto .imagensdireita .quatro p{
-  margin-top: 10px;
-  text-align: justify;
-  margin-bottom: 15px;
+  font-size: 16px;
 }
 
 .corpotudotexto .header img{
