--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ html {
     border-width: 1px;
 }
 
+.hamburguer{
+  display:none;
+}
+
 .element .menu .logo{
   float: left;
 }
@@ -322,4 +326,453 @@ html {
   height: 500px;
   border: 0;
   margin-top: 10%;
+}
+
+@media (max-width: 1366px){ /* Desktop */
+  .element .menu ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 5px;
+      overflow: hidden;
+      border-bottom: solid;
+      border-color: #fff;
+      border-width: 1px;
+  }
+
+  .hamburguer{
+    display:none;
+  }
+
+  .element .menu .logo{
+    float: left;
+  }
+
+  .element .menu .menu_right{
+    float: right;
+  }
+
+  .element .menu .logo{
+    margin-left: 50px;
+  }
+
+  .element .menu li a {
+      margin-right: 50px;
+      color: rgb(33, 33, 33);
+      padding: 14px 16px;
+      text-decoration: none;
+      font-family: 'Montserrat', sans-serif;
+      display: inline;
+  }
+
+  .menu li a:hover{
+    color: #fff;
+  }
+
+  .corpo{
+    width: 500px;
+    height: 300px;
+    position: relative;
+    margin-top: 200px;
+    left: 50%;
+    margin-left: -250px;
+    float: center;
+    text-align: center;
+  }
+
+  .corpo h1{
+    color: rgb(44, 44, 48);
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 55px;
+  }
+
+  .corpo p{
+    color: rgb(44, 44, 48);
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+  }
+
+  .corpo a{
+    background-color: rgb(44, 44, 48);
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin-top: 60px;
+    cursor: pointer;
+    border-radius: 20px;
+  }
+
+  .corpotudotexto {
+      background-image: url('nature.jpg');
+      background-repeat: no-repeat;
+      background-size:100%;
+      bottom: 0;
+      left: 0;
+      overflow: auto;
+      position: absolute;
+      right: 0;
+      top: 58px;
+      background-color: rgb(255, 255, 255);
+  }
+
+  .corpotudotexto  h1{
+    margin-top: 50px;
+    color: rgb(44, 44, 48);
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 32px;
+    margin-bottom: 50px;
+  }
+
+  .corpotudotexto .left{
+    margin-left: 5%;
+    width: 40%;
+    float: left;
+    font-size: 18px;
+    text-align: justify;
+  }
+
+  .corpotudotexto .left p{
+    letter-spacing: 2px;
+    margin-top: 20px;
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+  }
+
+  .corpotudotexto .right{
+    margin-right: 5%;
+    width: 40%;
+    float: right;
+  }
+
+  .corpotudotexto .right img{
+    width: 100%;
+    height: 350px;
+  }
+
+  .corpotudotexto .right p{
+    letter-spacing: 2px;
+    float: left;
+    width: 85%;
+    margin-top: 20px;
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+  }
+
+
+  .corpotudotexto a{
+    color: rgb(44, 44, 48);
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 32px;
+    text-decoration: none;
+  }
+
+  .corpotudotexto .topo h1{
+    margin-top: 50px;
+    margin-left: 3%;
+    color: rgb(44, 44, 48);
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 32px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgb(185, 185, 185);
+    width: 93%;
+  }
+
+  .corpotudotexto .imagensesquerda{
+    float: left;
+    margin-left: 5%;
+    width: 42%;
+  }
+
+  .corpotudotexto .imagensdireita{
+    float: left;
+    margin:right;
+    width: 42%;
+  }
+
+  .corpotudotexto .imagensesquerda{
+    width: 100%;
+  }
+
+  .corpotudotexto .imagensesquerda a{
+    color: rgb(110, 168, 221);
+  }
+
+  .corpotudotexto .imagensesquerda .um p{
+    font-size: 16px;
+  }
+
+  .corpotudotexto .imagensesquerda img{
+    margin-top: 20px;
+    width:100%;
+    height:400px;
+  }
+
+  .corpotudotexto .imagensdireita{
+    width: 100%;
+  }
+
+  .corpotudotexto .imagensdireita a{
+    color: rgb(110, 168, 221);
+    height:400px;
+
+  }
+
+  .corpotudotexto .imagensdireita img{
+    margin-top: 20px;
+    width:100%;
+    height:400px;
+  }
+
+  .corpotudotexto .imagensesquerda{
+    margin-left: 7%;
+    width: 40%;
+  }
+
+  .corpotudotexto .imagensesquerda p{
+    margin-top: 10px;
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+
+  .corpotudotexto .imagensdireita{
+    margin-left: 5%;
+    width: 40%;
+  }
+
+  .corpotudotexto .imagensdireita p{
+    margin-top: 10px;
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+
+  .corpotudotexto .imagensesquerda .um p{
+    font-size: 16px;
+  }
+
+  .corpotudotexto .imagensesquerda .tres p{
+    font-size: 16px;
+  }
+
+  .corpotudotexto .imagensdireita .dois p{
+    font-size: 16px;
+  }
+
+  .corpotudotexto .imagensdireita .quatro p{
+    font-size: 16px;
+  }
+
+  .corpotudotexto .header img{
+    position: absolute;
+    width: 90%;
+    height: 200px;
+    left: 5% !important;
+  }
+
+  .corpotudotexto .informação{
+    position: absolute;
+    margin-left: 5%;
+    margin-top: 300px;
+  }
+
+  .corpotudotexto .informação h2{
+    color: rgb(44, 44, 48);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  .corpotudotexto .informação p{
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .corpotudotexto .informação .informação1{
+    width: 20%;
+    display: inline-block;
+    margin-right: 4%;
+  }
+
+  .corpotudotexto .informação .informação1 img{
+    margin-top: 10px;
+    width: 100%;
+    height: 150px;
+  }
+
+  .corpotudotexto .informação .informação2{
+    width: 20%;
+    display: inline-block;
+    margin-right: 4%;
+  }
+
+  .corpotudotexto .informação .informação2 img{
+    margin-top: 10px;
+    width: 100%;
+    height: 150px;
+  }
+
+  .corpotudotexto .informação .informação3{
+    width: 20%;
+    display: inline-block;
+    margin-right: 4%;
+  }
+
+  .corpotudotexto .informação .informação3 img{
+    margin-top: 10px;
+    width: 100%;
+    height: 150px;
+  }
+
+  .corpotudotexto .informação .informação4{
+    width: 20%;
+    display: inline-block;
+  }
+
+  .corpotudotexto .informação .informação4 img{
+    margin-top: 10px;
+    width: 100%;
+    height: 150px;
+  }
+
+  .corpotudotexto .right iframe{
+    width: 100%;
+    height: 500px;
+    border: 0;
+    margin-top: 10%;
+  }
+}
+
+@media (max-width: 800px){ /* Tablet */
+  .element .menu ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 5px;
+      overflow: hidden;
+      border-bottom: solid;
+      border-color: #fff;
+      border-width: 1px;
+  }
+
+  .hamburguer{
+    display:none;
+  }
+
+  .element .menu .logo{
+    float: left;
+  }
+
+  .element .menu .menu_right{
+    float: right;
+  }
+
+  .element .menu .logo{
+    margin-left: 30px;
+  }
+
+  .element .menu li a {
+      margin-right: 30px;
+      color: rgb(33, 33, 33);
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 14px;
+      font-family: 'Montserrat', sans-serif;
+      display: inline;
+  }
+
+  .element .menu a:hover{
+    color: #fff;
+  }
+
+  .corpotudotexto .left{
+    margin-left: 2%;
+    padding-right: 2%;
+    width: 95%;
+    font-size: 18px;
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+
+  .corpotudotexto .right{
+    width: 100%;
+    float: left;
+    text-align: center;
+  }
+
+  .corpotudotexto .right img{
+    width: 400px;
+    height: 200px;
+  }
+
+  .corpotudotexto .right p{
+    width: 100%;
+    text-align: center;
+  }
+
+  .corpotudotexto .imagensesquerda{
+    margin-left: 2%;
+    width: 95%;
+  }
+
+  .corpotudotexto .imagensesquerda img{
+    width: 100%;
+  }
+
+  .corpotudotexto .imagensdireita{
+    margin-left: 2%;
+    width: 95%;
+  }
+
+  .corpotudotexto .imagensdireita img{
+    width: 100%;
+  }
+
+  .corpotudotexto .informação .informação1{
+    margin-left: 0;
+    width: 95%;
+    margin-bottom: 40px;
+  }
+  .corpotudotexto .informação .informação2{
+    width: 95%;
+    margin-bottom: 40px;
+  }
+  .corpotudotexto .informação .informação3{
+    width: 95%;
+    margin-bottom: 40px;
+  }
+  .corpotudotexto .informação .informação4{
+    width: 95%;
+    margin-bottom: 40px;
+}
+  .corpotudotexto .informação h2{
+    text-align: center;
+  }
+
+  .corpotudotexto .right iframe{
+    width: 90%;
+    height: 500px;
+    border: 0;
+    margin-bottom: 40px;
+  }
+
+}
+
+@media (max-width: 400px){ /* Smartphone */
+  .element .menu{
+    visibility: hidden;
+  }
+
+  .hamburguer{
+    display: inline;
+    float: right;
+  }
 }
