--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 .hamburguer{
-  display:none;
+  visibility: hidden;
 }
 
 .element .menu .logo{
@@ -371,7 +371,7 @@ html {
     height: 300px;
     position: relative;
     margin-top: 200px;
-    margin-left: 32%;
+    margin-left: 18%;
     text-align: center;
   }
 
@@ -773,12 +773,24 @@ html {
 @media (max-width: 400px){ /* Smartphone */
 
   .element .menu{
-    width: 90%;
     visibility: hidden;
   }
 
-  .hamburguer{
-    display: inline;
-    float: right;
+  .corpo h1{
+    font-size: 30px;
+  }
+
+  .corpo p{
+    font-size: 12px;
+  }
+
+  .corpo a{
+    font-size: 12px;
+  }
+
+  .element .menu .hamburguer{
+    width: 50px;
+    height: 50px;
+    visibility: visible;
   }
 }
