--- a/PW15326TP1/css/style.css
+++ b/PW15326TP1/css/style.css
@@ -36,6 +36,17 @@ body{
   background-color: rgb(255, 255, 255);
 }
 
+.header a{
+  margin: 50px auto auto auto;
+  width: 100px;
+  padding: 8px 0 8px 0;
+  display: block;
+  background-color: #333;
+  border-radius: 50px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
 .corpo h1{
   text-align: center;
   margin-top: 100px;
@@ -61,11 +72,27 @@ img{
   vertical-align: center;
 }
 
-.col-md-2{
+.col-md-3{
   margin-top: 20px;
 }
 
-.col-md-2 img{
+.col-md-3 img{
   width: 100%;
   height: 200px;
+}
+
+textarea.form-control{
+  resize: none;
+}
+
+.corpo a{
+  text-align: center;
+  margin: 30px auto auto auto;
+  width: 100px;
+  padding: 8px 0 8px 0;
+  display: block;
+  background-color: #333;
+  border-radius: 50px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
 }
